# ESG-Telemetry-Platform-Carbon-Analytics-Forecasting-and-Anomaly-Detection

./: .gitignore  BRANDING.md  README.md  SCALING.md  docker-compose.yml  pyproject.toml  run_command.txt  tmp_absolute_reality.py
backend/: .env.example  Dockerfile  requirements.txt  stress_test.py
backend/app/: config.py  db.py  dependencies.py  logging_config.py  main.py  ml_ops.py  recommender.py  schemas.py
backend/app/api/: routes_model.py
backend/app/api/v1/: recommendations.py
backend/app/ml/: anomaly.py  predict.py  preprocessing.py  train.py
backend/config/: base.yaml  development.yaml  production.yaml
backend/data/: dpp_data.csv  security_model.pkl  sustainability.db  v7_sustainability.db
backend/tests/: conftest.py  test_api.py
docs/: DATASET.md  FAILURE_MODES.md  INTERNALS.md  OBSERVABILITY.md  RESULTS.md  SECURITY_SPECS.md  api_deep_dive.md
eco/audit/: merkle_trail.py
eco/pipeline/: async_ingest.py
frontend/: Dockerfile  dashboard.py  requirements.txt
notebooks/: performance_analysis.ipynb
results/: ESG_Report_Sample.md
scripts/: ingest_sample.py
